--- a/index.html
+++ b/index.html
@@ -170,13 +170,14 @@
           <!-- EDIT SURAT DI SINI -->
           <p>
             1 Yohanes 4:19: "Kita mengasihi, karena Allah lebih dahulu mengasihi
-            kita."
-            <br /><br />
-            Terima kasih telah menjadi bagian terindah dalam hidupku. Setiap
-            momen bersama kamu adalah anugerah yang tak ternilai. Aku bersyukur
-            atas cinta dan kebahagiaan yang kamu bawa ke dalam hidupku. Semoga
-            hari Valentine ini menjadi awal dari banyak kenangan indah yang akan
-            kita ciptakan bersama.
+            kita." Terima kasih telah menjadi bagian terindah dalam hidup aku.
+            Setiap momen bersama kamu adalah anugerah yang tak ternilai. Aku
+            bersyukur atas cinta dan kebahagiaan yang kamu bawa ke dalam
+            hidupku. Semoga hari Valentine ini menjadi awal dari banyak kenangan
+            indah yang akan kita ciptakan bersama. Maaf kalau aku nggak bisa
+            kasih apa-apa selain surat ini, tapi aku harap kamu tahu betapa
+            berharganya kamu buat aku. Aku cinta kamu selalu. Merry Valentine!
+            Semoga hari kamu seindah senyuman kamu.
           </p>
 
           <p class="script" style="text-align: right; color: #e63950">
